fix(css): html pas de max-height, pas d'overflow-y pour lightpad

--- a/css/lightpad.css
+++ b/css/lightpad.css
@@ -1,3 +1,8 @@
+html {
+	max-height: none;
+	overflow-y: unset;
+}
+
 h1,
 #searchBar {
 	position: fixed !important;
